// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonIcon - with BadgeIndicator render with badge indicator 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  background-color: #ffffff;
  height: 0.25rem;
  width: 0.25rem;
  border-radius: 0.25rem;
}

.c0 {
  position: relative;
  width: 2.75rem;
  height: 2.75rem;
}

.c1 {
  position: absolute;
  z-index: 1;
  height: 1rem;
  width: 1rem;
  left: calc(50% + 0.375rem);
  bottom: calc(50% + 0.375rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  margin: 0px;
  cursor: pointer;
  box-sizing: border-box;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  touch-action: manipulation;
  pointer-events: auto;
  vertical-align: middle;
  outline: none;
  width: 100%;
  height: 100%;
  background-color: #000000;
  border-radius: 50%;
  border: none;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-transition: ease-out 0.1s;
  transition: ease-out 0.1s;
}

.c5:focus:not(:hover) {
  outline: none;
}

.c5:focus:not(:hover)::before {
  content: '';
  border: 0.0625rem dashed  #000000;
  border-radius: 50%;
  position: absolute;
  width: calc(100% + 0.25rem);
  height: calc(100% + 0.25rem);
}

.c5:focus:not(:hover):focus:not(:focus-visible)::before {
  border: none;
}

.c5:hover {
  outline: none;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c5:hover:active {
  box-shadow: 0 0 0 0.0625rem #6f7171;
}

.c5:active {
  background-color: #6f7171;
}

.c5:active svg path,
.c5:active svg polygon {
  fill: #ffffff;
}

.c5:focus:active:not(:hover) {
  box-shadow: none;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  bottom: 0;
  pointer-events: none;
}

.c7:focus {
  outline: none;
}

.c6 {
  height: 2.75rem;
  width: 2.75rem;
  display: inline-block;
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  text-align: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c6:hover {
  cursor: pointer;
}

.c8 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c8:active,
.c8:focus {
  outline: none;
}

<div>
  <div
    class="c0"
    kind="highContrast"
  >
    <div
      class="c1"
      size="16"
    >
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
          kind="simple"
        >
          <div
            class="c4"
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      aria-hidden="false"
      aria-label="icon"
      class="c5"
      kind="highContrast"
      role="button"
      tabindex="0"
    >
      <span
        class="c6"
      />
      <span
        class="c7"
      >
        <svg
          aria-hidden="false"
          aria-label="add-to-favorite icon"
          class="c8"
          fill="#ffffff"
          role="img"
          viewBox="0 0 21.6 21.6"
        >
          <title>
            add-to-favorite icon
          </title>
          <g>
            <path
              d="M10.8,18.7l-7.2-6.9C2.4,10.6,1.8,9.4,1.8,8c0-2.8,2.3-5.1,5.1-5.1c1.6,0,3,0.7,4,1.9c1-1.2,2.4-1.9,3.9-1.9
		c2.8,0,5.1,2.3,5.1,5.1c0,1.8-1,3-2,4L10.8,18.7z M6.9,4c-2.2,0-4,1.8-4,3.9c0,1.1,0.4,2,1.4,3l6.5,6.2l6.3-6
		c1.1-1.1,1.6-2.1,1.6-3.2c0-2.2-1.8-3.9-4-3.9c-1.4,0-2.4,0.8-3.5,2l-0.4,0.5L10.4,6C9.4,4.7,8.3,4,6.9,4z"
              fill="#ffffff"
              stroke="none"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Low Contrast - Light Surface - float false  Icon button active styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  margin: 0px;
  cursor: pointer;
  box-sizing: border-box;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  touch-action: manipulation;
  pointer-events: auto;
  vertical-align: middle;
  outline: none;
  width: 100%;
  height: 100%;
  background-color: rgba(111,113,113,0.06);
  border-radius: 50%;
  border: none;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-transition: ease-out 0.1s;
  transition: ease-out 0.1s;
}

.c0:focus:not(:hover) {
  outline: none;
}

.c0:focus:not(:hover)::before {
  content: '';
  border: 0.0625rem dashed  #000000;
  border-radius: 50%;
  position: absolute;
  width: calc(100% + 0.25rem);
  height: calc(100% + 0.25rem);
}

.c0:focus:not(:hover):focus:not(:focus-visible)::before {
  border: none;
}

.c0:hover {
  outline: none;
  box-shadow: 0 0 0 0.0625rem rgba(111,113,113,0.06);
}

.c0:hover:active {
  box-shadow: 0 0 0 0.0625rem rgba(111,113,113,0.06);
}

.c0:active svg path,
.c0:active svg polygon {
  fill: #6f7171;
}

.c0:focus:active:not(:hover) {
  box-shadow: none;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  bottom: 0;
  pointer-events: none;
}

.c2:focus {
  outline: none;
}

.c1 {
  height: 2.75rem;
  width: 2.75rem;
  display: inline-block;
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  text-align: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1:hover {
  cursor: pointer;
}

.c3 {
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

.c3:active,
.c3:focus {
  outline: none;
}

<button
  aria-disabled="false"
  aria-hidden="false"
  aria-label="icon"
  class="c0"
  kind="lowContrast"
  role="button"
  tabindex="0"
>
  <span
    class="c1"
  />
  <span
    class="c2"
  >
    <svg
      aria-hidden="false"
      aria-label="app-dialer icon"
      class="c3"
      fill="#000000"
      role="img"
      viewBox="0 0 21.6 21.6"
    >
      <title>
        app-dialer icon
      </title>
      <path
        d="M6.70574,6.71227H1.8V1.8H6.70574ZM2.91688,5.59412h2.672v-2.676h-2.672Zm10.3292,1.11815H8.33937V1.8h4.90671ZM9.45625,5.59412h2.673v-2.676H9.45625ZM19.78546,6.71227H14.87875V1.8h4.90671ZM15.99563,5.59412h2.67295v-2.676H15.99563Zm-9.27535,7.662H1.81454V8.34387H6.72028ZM2.93142,12.138h2.672V9.462h-2.672Zm10.32921,1.11814H8.35392V8.34387h4.90671ZM9.4708,12.138h2.673V9.462H9.4708ZM19.8,13.25613H14.89329V8.34387H19.8ZM16.01017,12.138h2.673V9.462H16.01017ZM6.70574,19.8H1.8V14.88773H6.70574ZM2.91688,18.68185h2.672v-2.676h-2.672ZM13.24608,19.8H8.33937V14.88773h4.90671ZM9.45625,18.68185h2.673v-2.676H9.45625ZM19.78546,19.8H14.87875V14.88773h4.90671Zm-3.78983-1.11815h2.67295v-2.676H15.99563Z"
        fill="#000000"
        stroke="none"
      />
    </svg>
  </span>
</button>
`;
